[package]
name = "any_stream"
authors = ["Adam Kaliszan adam.kaliszan@gmail.com"]
readme = "https://github.com/adamkaliszan/anyStreamRust/blob/master/README.md"
version = "0.2.0"
edition = "2021"
keywords = ["simulator", "teletraffic enginery"]
description = """Single service loss system. Any type of arrival and service stream.
This tool would provide height quality data for system without product form solution.
Results could be usefull as training data in machine learning."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#map_first_last

[lib]

[dependencies]
assert_approx_eq = "1.1.0"
approx = "0.5.1"
clap = { version = "3.2.22", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
rand = "0.8.5"
rand_distr = "0.4.3"
separator = "0.4.1"
itertool = "0.1.0"
cartesian = "0.2.1"
flot = "0.1.3"
float-cmp = "0.9.0"
serde_json = "1.0.99"

[dependencies.mongodb]
version = "2.6.0"
features = ["tokio-sync"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

