[package]
name = "any_stream"
authors = ["Adam Kaliszan adam.kaliszan@gmail.com"]
readme = "https://github.com/adamkaliszan/anyStreamRust/blob/master/README.md"
version = "0.3.1"
edition = "2021"
keywords = ["simulator", "teletraffic enginery"]
description = """Single service loss system. Any type of arrival and service stream.
This tool would provide height quality data for system without product form solution.
Results could be usefull as training data in machine learning."""

[features]

[lib]

[dependencies]
anyhow = "1.0"
approx = "0.5.1"
assert_approx_eq = "1.1.0"
btreemultimap = "0.1.1"
cartesian = "0.2.1"
confy = "0.3.1"
flot = "0.1.3"
float-cmp = "0.9.0"
itertool = "0.1.0"
log = "0.4"
rand = "0.8.5"
rand_distr = "0.4.3"
semver = "1.0.18"
separator = "0.4.1"
serde_json = "1.0.99"

[dependencies.clap]
version = "3.2.22"
features = ["derive"]

[dependencies.mongodb]
version = "2.6.0"
features = ["tokio-sync"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
